# neXus

./: .gitignore  Consumer Key  INFLUENCE_PATHWAYS_INTEGRATION.md  OPTIMIZATION_STRATEGY.md  PHASE1_OPTIMIZATIONS_SUMMARY.md  SETUP_INNGEST.md  SETUP_RAG.md  package-lock.json  package.json  requirements.txt  vercel.json
.github/workflows/: deploy-backend.yml
api/: index.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/cdk/: README.md
backend/cdk/lib/: nexus-backend-stack.ts
backend/migrations/: 001_add_embeddings.sql  002_add_summary_column.sql
backend/nexus/: __init__.py  db.py  init_db.py  main.py  utils.py
backend/nexus/db/: __init__.py  schema.py
backend/nexus/models/: __init__.py  app_user.py  network.py  user.py  x_profile.py  x_tweet.py
backend/nexus/routes/: __init__.py  bridge.py  embeddings.py  followers.py  generate_rag.py  graph_intelligence.py  influence_pathways.py  items.py  network.py  posts.py  profiles.py  scrape.py  tweets.py  user.py
backend/nexus/services/: __init__.py  embeddings.py  scraper.py  twitter_client.py
backend/nexus/utils/: __init__.py  rate_limiter.py  staleness.py
cdk/: package.json  tsconfig.json
cdk/lib/: nexus-backend-stack.ts
frontend/: .env.example  package-lock.json  package.json
src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
src/components/: AuthProvider.tsx  GraphVisualization.tsx  InfluencePathways.tsx  IntroModal.tsx  NetworkBackground.tsx  NetworkVisualization.tsx  ProfileCard.tsx  SearchBar.tsx
src/lib/: auth.ts
supabase/: setup_vector_search.sql
(+34 files in other folders)
