[tool.poetry]
name = "nexus-servers"
version = "0.1.0"
description = "neXus servers workspace"
authors = ["Your Name <you@example.com>"]
packages = [{include = "nexus"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.44"
asyncpg = "^0.31.0"
greenlet = "^3.3.0"
httpx = "^0.28.0"
python-dotenv = "^1.0.0"
inngest = "^0.5.13"
pgvector = "^0.4.2"
google-generativeai = "^0.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[tool.poetry.scripts]
nexus = "nexus.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
